--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,30 @@
+@font-face{
+    font-family: WorkSans;
+    src: url(../fonts/WorkSans-Regular.ttf);
+}
+
+@font-face{
+    font-family: WorkSans;
+    src: url(../fonts/WorkSans-Bold.ttf);
+    font-weight: bold;
+}
+
+@font-face{
+    font-family: WorkSans-SemiBold;
+    src: url(../fonts/WorkSans-SemiBold.ttf);
+}
+
+@font-face{
+    font-family: OpenSans;
+    src: url(../fonts/OpenSans-ExtraBold.ttf);
+    font-weight: bold;
+}
+@font-face{
+    font-family: Avalon-Bold;
+    src: url(../fonts/Avalon-Bold.ttf);
+}
+
+
 body, div, h1, h2, h3, h4, p {
     margin: 0;
 }
