--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -1,8 +1,18 @@
 $textcolor: #191919;
 $yellowcolor: #fedd23;
+$white: #ffffff;
+
 .picture{
   width: 183px;
   height: 62px;
+}
+
+.header,.footerText{
+  font-family: Avalon-Bold;
+}
+.header, .text, .slogan{
+  color: $textcolor;
+  text-align: center;
 }
 .slogan{
   width: 245px;
@@ -12,56 +22,72 @@ $yellowcolor: #fedd23;
   font-size: 12px;
   letter-spacing: 5.6px;
   text-transform: uppercase;
-  color: $textcolor;
 }
+
 .header{
+  max-width: 841px;
+  min-height: 67px;
   margin-top: 65px;
-  font-family: Avalon-Bold;
   font-size: 60px;
   line-height: 1.12;
   letter-spacing: 0.8px;
-  color: $textcolor;
-  min-height: 67px;
-  max-width: 841px;
-  text-align: center;
   & span{
     color:$yellowcolor;
     font-size: 20px;
   }
 }
+
 .text{
+  max-width: 770px;
+  min-height: 169px;
+  margin: 46px 17% 0;
   font-family: WorkSans-SemiBold;
   font-size: 24px;
   line-height: 1.79;
-  color: $textcolor;
-  margin: 46px 17% 0;
-  min-height: 169px;
-  text-align: center;
-  max-width: 770px;
 }
+
 .footerText{
-  font-family: Avalon-Bold;
-  color: #ffffff;
-  font-size: 38px;
-  line-height: 1.3;
   max-width: 709px;
   min-height: 208px;
+  margin-top: 206px;
+  color: $white;
+  font-size: 38px;
+  line-height: 1.3;
   text-align: center;
   padding: 0;
-  margin-top: 222px;
 }
+
+.pictureContainer,.footer{
+  display:flex;
+}
+
 .footer{
-  display: flex;
+  min-height: 686px;
   margin-top: 70px;
+  justify-content: center;
   background: url("../image/bitmap.png") no-repeat center;
   background-color: #000000;
-  justify-content: center;
-  min-height: 686px;
 }
+
+.container{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 196px;
+  background-color: $yellowcolor;
+}
+
 .pictureContainer{
-  display:flex;
   flex-direction: column;
   width: 100%;
-  align-items: center;
   margin-top: 53px;
+  align-items: center;
+}
+
+.cardContainer{
+  min-width: 1097px;
+  position: relative;
+  top: -147px;
+  margin-bottom: -71px;
+  background-color: $white;
+  box-shadow: 0 25px 54px 0 rgba(0, 0, 0, 0.11);
 }
