--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,12 +1,19 @@
 $titlecolor: #191919;
 $colortext: #7d7d7d;
-.container{
+$bordercolor: #dcdcdc;
+
+.container, .buttonBox, .buttons{
   display: flex;
+}
+.container, .buttons{
   flex-direction: row;
+}
+.subtitle, .quantity, .singlePrice, .formItem{
+  font-family: WorkSans;
+}
+.container{
   border-bottom: solid 1.3px #ececec;
-  margin-left: 52px;
-  margin-right: 62.3px;
-  margin-top: 33px;
+  margin: 33px 62.3px 0 52px;
   padding-bottom: 32px;
   align-items: center;
 }
@@ -17,6 +24,9 @@ $colortext: #7d7d7d;
   align-self: flex-start;
   border-radius: 10px;
   box-shadow: 0 15px 25px 0 rgba(0, 0, 0, 0.11);
+  &:hover{
+    opacity: 0.8;
+  }
 }
 .title{
   font-family: WorkSans-SemiBold;
@@ -27,7 +37,6 @@ $colortext: #7d7d7d;
 
 .subtitle{
   max-width: 402px;
-  font-family: WorkSans;
   color: $colortext;
   font-size: 16px;
   line-height: 1.56;
@@ -40,62 +49,65 @@ $colortext: #7d7d7d;
   margin-right: 46px;
   background-color: rgba(43, 46, 64, 0.06);
 }
+
 .buttonBox{
-  display: flex;
   flex-direction: column;
   align-self: flex-start;
 }
+
 .buttons{
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
   margin-top: 46px;
+  align-items: baseline;
 }
+
 .delete{
   width: 20px;
   height: 23px;
   margin-top: 5px;
-  opacity: 0.53;
+  padding: 0;
+  align-self: flex-end;
   background: transparent;
   border: none;
-  align-self: flex-end;
-  padding: 0;
+  opacity: 0.53;
   &img{
     width: 20px;
     height: 23px;
   }
   &:hover{
     cursor: pointer;
+    opacity: 0.8;
   }
 }
 .inc_dec{
   width: 39px;
   height: 39px;
+  font-family: WorkSans-thin;
+  font-size: 26px;
   border-radius: 2px;
-  border: solid 1px #dcdcdc;
+  border: solid 1px $bordercolor;
   background: transparent;
+  padding: 0;
   &:hover{
     cursor: pointer;
+    opacity: 0.8;
   }
 }
 .quantity{
   width: 59px;
-  font-family: WorkSans;
   font-size: 16px;
   line-height: 2.25;
   text-align: center;
   color: $colortext;
 }
 .price{
+  min-width: 70px;
   margin-left: 44px;
   font-family: Avalon-Bold;
-  min-width: 70px;
   font-size: 20px;
   line-height: 2;
   color: #000000;
 }
 .singlePrice{
-  font-family: WorkSans;
   margin-top: 10px;
   font-size: 11px;
   line-height: 1.8;
@@ -104,10 +116,10 @@ $colortext: #7d7d7d;
 .form{
   max-width: 242px;
   height: 51px;
-  position: relative;
   margin-top: 45px;
+  position: relative;
   border-radius: 2px;
-  border: solid 1px #dcdcdc;
+  border: solid 1px $bordercolor;
   overflow: hidden;
   &:after{
     content: '\25bc';
@@ -130,7 +142,6 @@ select::-ms-expand {
 .formItem{
   width: 100%;
   height: 51px;
-  font-family: WorkSans;
   font-size: 16px;
   line-height: 1.64;
   color: #4d4d4d;
