--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,7 +1,5 @@
 .total{
-  margin-top: 59px;
-  margin-right: 65px;
-  margin-bottom: 59px;
+  margin: 59px 65px 59px 0;
   align-self: flex-end;
   font-family: Avalon-Bold;
   font-size: 35px;
