--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,11 @@
     src: url(../fonts/Avalon-Bold.ttf);
 }
 
+@font-face{
+    font-family: WorkSans-thin;
+    src: url(../fonts/WorkSans-Thin.ttf);
+}
+
 body, div, h1, h2, h3, h4, p {
     margin: 0;
 }
